--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-spring": "^8.0.27",
+    "react-swipeable": "^5.5.1",
+    "react-use-gesture": "^7.0.16",
     "typescript": "3.8.3"
   },
   "scripts": {
