--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "firebase": "^8.0.2",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -24,6 +25,7 @@
     "react-spring": "^8.0.27",
     "react-swipeable": "^5.5.1",
     "react-use-gesture": "^7.0.16",
+    "save": "^2.4.0",
     "typescript": "3.8.3"
   },
   "scripts": {
